tests/analyzer/errors/native_module.ray
use data.cmodule.not_cmodule
use data.cmodule.missing

fn main() { }
